--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,31 +3,31 @@
   <span fxFlex></span>
     <ul>
       <li *ngIf="userIsAdmin">
-        <a mat-button routerLink="/createModerator" routerLinkActive="mat-accent">Add Moderator</a>
+        <a mat-button routerLink="/createModerator" routerLinkActive="mat-accent">Add</a>
       </li>
       <li *ngIf="userIsAdmin">
-        <a mat-button routerLink="/postListExpired" routerLinkActive="mat-accent">Expired Post</a>
+        <a mat-button routerLink="/postListExpired" routerLinkActive="mat-accent">Expired</a>
       </li>
       <li *ngIf="userIsAdmin">
-        <a mat-button routerLink="/postListSold" routerLinkActive="mat-accent">Sold Post</a>
+        <a mat-button routerLink="/postListSold" routerLinkActive="mat-accent">Sold</a>
       </li>
       <li *ngIf="userIsAdmin">
-        <a mat-button routerLink="/userList" routerLinkActive="mat-accent">User List</a>
+        <a mat-button routerLink="/userList" routerLinkActive="mat-accent">Users</a>
       </li>
       <li *ngIf="userIsAuthenticated && !userIsAdmin">
-        <a mat-button routerLink="/postListSelling" routerLinkActive="mat-accent">My posts</a>
+        <a mat-button routerLink="/postListSelling" routerLinkActive="mat-accent">Mine</a>
       </li>
       <li *ngIf="userIsAuthenticated && !userIsAdmin">
-        <a mat-button routerLink="/postListBuying" routerLinkActive="mat-accent">My bids</a>
+        <a mat-button routerLink="/postListBuying" routerLinkActive="mat-accent">Bidded</a>
       </li>
       <li *ngIf="userIsAuthenticated && !userIsAdmin">
-        <a mat-button routerLink="/postListWon" routerLinkActive="mat-accent">My won bids</a>
+        <a mat-button routerLink="/postListWon" routerLinkActive="mat-accent">Won</a>
       </li>
       <li *ngIf="userIsAuthenticated && !userIsAdmin">
-        <a mat-button routerLink="/postListBought" routerLinkActive="mat-accent">Bought Products</a>
+        <a mat-button routerLink="/postListBought" routerLinkActive="mat-accent">Bought</a>
       </li>
       <li *ngIf="userIsAuthenticated && !userIsAdmin">
-        <a mat-button routerLink="/createPost" routerLinkActive="mat-accent">New post</a>
+        <a mat-button routerLink="/createPost" routerLinkActive="mat-accent">New</a>
       </li>
       <li *ngIf="!userIsAuthenticated">
         <a mat-button routerLink="/login" routerLinkActive="mat-accent">Login</a>
@@ -36,7 +36,7 @@
         <a mat-button routerLink="/signup" routerLinkActive="mat-accent">Signup</a>
       </li>
       <li *ngIf="userIsAuthenticated">
-        <button mat-button (click)="onLogout()">Logout</button>
+        <button mat-button (click)="onLogout()">Leave</button>
       </li>
     </ul>
 </mat-toolbar>
